exports[`setup new cloudtrail to slack integration 1`] = `
{
  "Resources": {
    "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E": {
      "DependsOn": [
        "CloudTrailSlackIntegrationEventTransformerLambdaServiceRoleDefaultPolicy5382BB7D",
        "CloudTrailSlackIntegrationEventTransformerLambdaServiceRole9B83CFED",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-us-east-1",
          },
          "S3Key": "2fc19559351e833384ddfd6691bf3576d0bdb69173b95732eb9371bbc7971439.zip",
        },
        "Description": "Formats CloudTrail API calls sent through EventBridge, and posts them directly to Slack or first to an SQS FIFO queue for deduplication",
        "Environment": {
          "Variables": {
            "DEDUPLICATE_EVENTS": "false",
            "FRIENDLY_NAMES": "{"123456789012":"example-friendly-name"}",
            "SLACK_CHANNEL": "#example-channel",
            "SLACK_WEBHOOK_URL": "https://hooks.slack.com/services/T00000000/B00000000/XXXXXXXXXXXXXXXXXXXXXXXX",
          },
        },
        "Handler": "main.handler_event_transformer",
        "LoggingConfig": {
          "LogGroup": {
            "Ref": "CloudTrailSlackIntegrationEventTransformerLambdaLogGroup747BA2D6",
          },
        },
        "Role": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationEventTransformerLambdaServiceRole9B83CFED",
            "Arn",
          ],
        },
        "Runtime": "python3.13",
        "Timeout": 15,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CloudTrailSlackIntegrationEventTransformerLambdaLogGroup747BA2D6": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "RetentionInDays": 180,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "CloudTrailSlackIntegrationEventTransformerLambdaServiceRole9B83CFED": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CloudTrailSlackIntegrationEventTransformerLambdaServiceRoleDefaultPolicy5382BB7D": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "iam:ListAccountAliases",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CloudTrailSlackIntegrationEventTransformerLambdaServiceRoleDefaultPolicy5382BB7D",
        "Roles": [
          {
            "Ref": "CloudTrailSlackIntegrationEventTransformerLambdaServiceRole9B83CFED",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CloudTrailSlackIntegrationRuleForAssumeRole04E292A6": {
      "Properties": {
        "EventPattern": {
          "detail": {
            "eventName": [
              "AssumeRole",
            ],
            "requestParameters": {
              "roleArn": [
                "arn:aws:iam::123456789012:role/example-role",
              ],
            },
          },
        },
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "CloudTrailSlackIntegrationRuleForAssumeRoleAllowEventRuleStackCloudTrailSlackIntegrationEventTransformerLambda2063974D45963B23": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationRuleForAssumeRole04E292A6",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "CloudTrailSlackIntegrationRuleForRootUserMfaChange09DBDB08": {
      "Properties": {
        "EventPattern": {
          "detail": {
            "eventName": [
              "EnableMFADevice",
            ],
            "requestParameters": {
              "userName": [
                "AWS ROOT USER",
              ],
            },
            "userIdentity": {
              "type": [
                "Root",
              ],
            },
          },
        },
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "CloudTrailSlackIntegrationRuleForRootUserMfaChangeAllowEventRuleStackCloudTrailSlackIntegrationEventTransformerLambda2063974D1C9BFBAF": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationRuleForRootUserMfaChange09DBDB08",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "CloudTrailSlackIntegrationRuleForRootUserPasswordChange02856AF9": {
      "Properties": {
        "EventPattern": {
          "detail": {
            "eventName": [
              "PasswordUpdated",
            ],
            "eventType": [
              "AwsConsoleSignIn",
            ],
            "userIdentity": {
              "type": [
                "Root",
              ],
            },
          },
        },
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "CloudTrailSlackIntegrationRuleForRootUserPasswordChangeAllowEventRuleStackCloudTrailSlackIntegrationEventTransformerLambda2063974DC24B899C": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationRuleForRootUserPasswordChange02856AF9",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "CloudTrailSlackIntegrationRuleForRootUserPasswordRecoveryComplete944DA8F9": {
      "Properties": {
        "EventPattern": {
          "detail": {
            "eventName": [
              "PasswordRecoveryCompleted",
            ],
            "eventType": [
              "AwsConsoleSignIn",
            ],
            "responseElements": {
              "PasswordRecoveryCompleted": [
                "Success",
              ],
            },
            "userIdentity": {
              "type": [
                "Root",
              ],
            },
          },
        },
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "CloudTrailSlackIntegrationRuleForRootUserPasswordRecoveryCompleteAllowEventRuleStackCloudTrailSlackIntegrationEventTransformerLambda2063974D16A728E1": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationRuleForRootUserPasswordRecoveryComplete944DA8F9",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "CloudTrailSlackIntegrationRuleForRootUserPasswordRecoveryRequest4D62C0C3": {
      "Properties": {
        "EventPattern": {
          "detail": {
            "eventName": [
              "PasswordRecoveryRequested",
            ],
            "eventType": [
              "AwsConsoleSignIn",
            ],
            "responseElements": {
              "PasswordRecoveryRequested": [
                "Success",
              ],
            },
            "userIdentity": {
              "type": [
                "Root",
              ],
            },
          },
        },
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "CloudTrailSlackIntegrationRuleForRootUserPasswordRecoveryRequestAllowEventRuleStackCloudTrailSlackIntegrationEventTransformerLambda2063974D5454E1A0": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationRuleForRootUserPasswordRecoveryRequest4D62C0C3",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "CloudTrailSlackIntegrationRuleForRootUserSuccessfulLoginAllowEventRuleStackCloudTrailSlackIntegrationEventTransformerLambda2063974DDEDC5EC7": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationRuleForRootUserSuccessfulLoginB9122E08",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "CloudTrailSlackIntegrationRuleForRootUserSuccessfulLoginB9122E08": {
      "Properties": {
        "EventPattern": {
          "detail": {
            "eventName": [
              "ConsoleLogin",
            ],
            "eventType": [
              "AwsConsoleSignIn",
            ],
            "responseElements": {
              "ConsoleLogin": [
                "Success",
              ],
            },
            "userIdentity": {
              "type": [
                "Root",
              ],
            },
          },
        },
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "CloudTrailSlackIntegrationRuleForRootUserUnsuccessfulLoginAllowEventRuleStackCloudTrailSlackIntegrationEventTransformerLambda2063974D1D9D2291": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationRuleForRootUserUnsuccessfulLoginB3DD368C",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "CloudTrailSlackIntegrationRuleForRootUserUnsuccessfulLoginB3DD368C": {
      "Properties": {
        "EventPattern": {
          "detail": {
            "eventName": [
              "ConsoleLogin",
            ],
            "eventType": [
              "AwsConsoleSignIn",
            ],
            "responseElements": {
              "ConsoleLogin": [
                "Failure",
              ],
            },
            "userIdentity": {
              "type": [
                "Root",
              ],
            },
          },
        },
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
  },
}
`;

exports[`setup new cloudtrail to slack integration with event deduplication 1`] = `
{
  "Resources": {
    "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E": {
      "DependsOn": [
        "CloudTrailSlackIntegrationEventTransformerLambdaServiceRoleDefaultPolicy5382BB7D",
        "CloudTrailSlackIntegrationEventTransformerLambdaServiceRole9B83CFED",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-us-east-1",
          },
          "S3Key": "2fc19559351e833384ddfd6691bf3576d0bdb69173b95732eb9371bbc7971439.zip",
        },
        "Description": "Formats CloudTrail API calls sent through EventBridge, and posts them directly to Slack or first to an SQS FIFO queue for deduplication",
        "Environment": {
          "Variables": {
            "DEDUPLICATE_EVENTS": "true",
            "FRIENDLY_NAMES": "{}",
            "SLACK_CHANNEL": "#example-channel",
            "SLACK_WEBHOOK_URL": "https://hooks.slack.com/services/T00000000/B00000000/XXXXXXXXXXXXXXXXXXXXXXXX",
            "SQS_QUEUE_URL": {
              "Ref": "CloudTrailSlackIntegrationQueue28060435",
            },
          },
        },
        "Handler": "main.handler_event_transformer",
        "LoggingConfig": {
          "LogGroup": {
            "Ref": "CloudTrailSlackIntegrationEventTransformerLambdaLogGroup747BA2D6",
          },
        },
        "Role": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationEventTransformerLambdaServiceRole9B83CFED",
            "Arn",
          ],
        },
        "Runtime": "python3.13",
        "Timeout": 15,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CloudTrailSlackIntegrationEventTransformerLambdaLogGroup747BA2D6": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "RetentionInDays": 180,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "CloudTrailSlackIntegrationEventTransformerLambdaServiceRole9B83CFED": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CloudTrailSlackIntegrationEventTransformerLambdaServiceRoleDefaultPolicy5382BB7D": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "iam:ListAccountAliases",
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "sqs:SendMessage",
                "sqs:GetQueueAttributes",
                "sqs:GetQueueUrl",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "CloudTrailSlackIntegrationQueue28060435",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CloudTrailSlackIntegrationEventTransformerLambdaServiceRoleDefaultPolicy5382BB7D",
        "Roles": [
          {
            "Ref": "CloudTrailSlackIntegrationEventTransformerLambdaServiceRole9B83CFED",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CloudTrailSlackIntegrationQueue28060435": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "FifoQueue": true,
        "QueueName": "CloudTrailSlackIntegrationc84e46f579ec6021ca77656851fd48e3a36ec4aad0.fifo",
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "CloudTrailSlackIntegrationRuleForAssumeRole04E292A6": {
      "Properties": {
        "EventPattern": {
          "detail": {
            "eventName": [
              "AssumeRole",
            ],
            "requestParameters": {
              "roleArn": [
                "arn:aws:iam::123456789012:role/example-role",
              ],
            },
          },
        },
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "CloudTrailSlackIntegrationRuleForAssumeRoleAllowEventRuleStackCloudTrailSlackIntegrationEventTransformerLambda2063974D45963B23": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationRuleForAssumeRole04E292A6",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "CloudTrailSlackIntegrationRuleForRootUserMfaChange09DBDB08": {
      "Properties": {
        "EventPattern": {
          "detail": {
            "eventName": [
              "EnableMFADevice",
            ],
            "requestParameters": {
              "userName": [
                "AWS ROOT USER",
              ],
            },
            "userIdentity": {
              "type": [
                "Root",
              ],
            },
          },
        },
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "CloudTrailSlackIntegrationRuleForRootUserMfaChangeAllowEventRuleStackCloudTrailSlackIntegrationEventTransformerLambda2063974D1C9BFBAF": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationRuleForRootUserMfaChange09DBDB08",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "CloudTrailSlackIntegrationRuleForRootUserPasswordChange02856AF9": {
      "Properties": {
        "EventPattern": {
          "detail": {
            "eventName": [
              "PasswordUpdated",
            ],
            "eventType": [
              "AwsConsoleSignIn",
            ],
            "userIdentity": {
              "type": [
                "Root",
              ],
            },
          },
        },
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "CloudTrailSlackIntegrationRuleForRootUserPasswordChangeAllowEventRuleStackCloudTrailSlackIntegrationEventTransformerLambda2063974DC24B899C": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationRuleForRootUserPasswordChange02856AF9",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "CloudTrailSlackIntegrationRuleForRootUserPasswordRecoveryComplete944DA8F9": {
      "Properties": {
        "EventPattern": {
          "detail": {
            "eventName": [
              "PasswordRecoveryCompleted",
            ],
            "eventType": [
              "AwsConsoleSignIn",
            ],
            "responseElements": {
              "PasswordRecoveryCompleted": [
                "Success",
              ],
            },
            "userIdentity": {
              "type": [
                "Root",
              ],
            },
          },
        },
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "CloudTrailSlackIntegrationRuleForRootUserPasswordRecoveryCompleteAllowEventRuleStackCloudTrailSlackIntegrationEventTransformerLambda2063974D16A728E1": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationRuleForRootUserPasswordRecoveryComplete944DA8F9",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "CloudTrailSlackIntegrationRuleForRootUserPasswordRecoveryRequest4D62C0C3": {
      "Properties": {
        "EventPattern": {
          "detail": {
            "eventName": [
              "PasswordRecoveryRequested",
            ],
            "eventType": [
              "AwsConsoleSignIn",
            ],
            "responseElements": {
              "PasswordRecoveryRequested": [
                "Success",
              ],
            },
            "userIdentity": {
              "type": [
                "Root",
              ],
            },
          },
        },
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "CloudTrailSlackIntegrationRuleForRootUserPasswordRecoveryRequestAllowEventRuleStackCloudTrailSlackIntegrationEventTransformerLambda2063974D5454E1A0": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationRuleForRootUserPasswordRecoveryRequest4D62C0C3",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "CloudTrailSlackIntegrationRuleForRootUserSuccessfulLoginAllowEventRuleStackCloudTrailSlackIntegrationEventTransformerLambda2063974DDEDC5EC7": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationRuleForRootUserSuccessfulLoginB9122E08",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "CloudTrailSlackIntegrationRuleForRootUserSuccessfulLoginB9122E08": {
      "Properties": {
        "EventPattern": {
          "detail": {
            "eventName": [
              "ConsoleLogin",
            ],
            "eventType": [
              "AwsConsoleSignIn",
            ],
            "responseElements": {
              "ConsoleLogin": [
                "Success",
              ],
            },
            "userIdentity": {
              "type": [
                "Root",
              ],
            },
          },
        },
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "CloudTrailSlackIntegrationRuleForRootUserUnsuccessfulLoginAllowEventRuleStackCloudTrailSlackIntegrationEventTransformerLambda2063974D1D9D2291": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationRuleForRootUserUnsuccessfulLoginB3DD368C",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "CloudTrailSlackIntegrationRuleForRootUserUnsuccessfulLoginB3DD368C": {
      "Properties": {
        "EventPattern": {
          "detail": {
            "eventName": [
              "ConsoleLogin",
            ],
            "eventType": [
              "AwsConsoleSignIn",
            ],
            "responseElements": {
              "ConsoleLogin": [
                "Failure",
              ],
            },
            "userIdentity": {
              "type": [
                "Root",
              ],
            },
          },
        },
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "CloudTrailSlackIntegrationSlackForwarderLambda313A2B40": {
      "DependsOn": [
        "CloudTrailSlackIntegrationSlackForwarderLambdaServiceRoleDefaultPolicy1A9FAB2C",
        "CloudTrailSlackIntegrationSlackForwarderLambdaServiceRoleAFAA799A",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-us-east-1",
          },
          "S3Key": "2fc19559351e833384ddfd6691bf3576d0bdb69173b95732eb9371bbc7971439.zip",
        },
        "Description": "Polls from an SQS FIFO queue containing formatted CloudTrail API calls and sends them to Slack.",
        "Handler": "main.handler_slack_forwarder",
        "LoggingConfig": {
          "LogGroup": {
            "Ref": "CloudTrailSlackIntegrationSlackForwarderLambdaLogGroup958A35FB",
          },
        },
        "Role": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationSlackForwarderLambdaServiceRoleAFAA799A",
            "Arn",
          ],
        },
        "Runtime": "python3.13",
        "Timeout": 15,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CloudTrailSlackIntegrationSlackForwarderLambdaLogGroup958A35FB": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "RetentionInDays": 14,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "CloudTrailSlackIntegrationSlackForwarderLambdaServiceRoleAFAA799A": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CloudTrailSlackIntegrationSlackForwarderLambdaServiceRoleDefaultPolicy1A9FAB2C": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "CloudTrailSlackIntegrationQueue28060435",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CloudTrailSlackIntegrationSlackForwarderLambdaServiceRoleDefaultPolicy1A9FAB2C",
        "Roles": [
          {
            "Ref": "CloudTrailSlackIntegrationSlackForwarderLambdaServiceRoleAFAA799A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CloudTrailSlackIntegrationSlackForwarderLambdaSqsEventSourceStackCloudTrailSlackIntegrationQueue877234B7B399CD08": {
      "Properties": {
        "EventSourceArn": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationQueue28060435",
            "Arn",
          ],
        },
        "FunctionName": {
          "Ref": "CloudTrailSlackIntegrationSlackForwarderLambda313A2B40",
        },
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
  },
}
`;

exports[`setup new cloudtrail to slack integration with event deduplication and infrastructure slack alarms 1`] = `
{
  "Resources": {
    "CloudTrailSlackIntegrationEventTransformerErrorAlarmFC759383": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "Triggers if the Lambda function that transforms CloudTrail API calls received through EventBridge fails (e.g., it fails to process the event)",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 1,
        "Dimensions": [
          {
            "Name": "FunctionName",
            "Value": {
              "Ref": "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "Errors",
        "Namespace": "AWS/Lambda",
        "OKActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 1,
        "TreatMissingData": "ignore",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E": {
      "DependsOn": [
        "CloudTrailSlackIntegrationEventTransformerLambdaServiceRoleDefaultPolicy5382BB7D",
        "CloudTrailSlackIntegrationEventTransformerLambdaServiceRole9B83CFED",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-us-east-1",
          },
          "S3Key": "2fc19559351e833384ddfd6691bf3576d0bdb69173b95732eb9371bbc7971439.zip",
        },
        "Description": "Formats CloudTrail API calls sent through EventBridge, and posts them directly to Slack or first to an SQS FIFO queue for deduplication",
        "Environment": {
          "Variables": {
            "DEDUPLICATE_EVENTS": "true",
            "FRIENDLY_NAMES": "{}",
            "SLACK_CHANNEL": "#example-channel",
            "SLACK_WEBHOOK_URL": "https://hooks.slack.com/services/T00000000/B00000000/XXXXXXXXXXXXXXXXXXXXXXXX",
            "SQS_QUEUE_URL": {
              "Ref": "CloudTrailSlackIntegrationQueue28060435",
            },
          },
        },
        "Handler": "main.handler_event_transformer",
        "LoggingConfig": {
          "LogGroup": {
            "Ref": "CloudTrailSlackIntegrationEventTransformerLambdaLogGroup747BA2D6",
          },
        },
        "Role": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationEventTransformerLambdaServiceRole9B83CFED",
            "Arn",
          ],
        },
        "Runtime": "python3.13",
        "Timeout": 15,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CloudTrailSlackIntegrationEventTransformerLambdaLogGroup747BA2D6": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "RetentionInDays": 180,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "CloudTrailSlackIntegrationEventTransformerLambdaServiceRole9B83CFED": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CloudTrailSlackIntegrationEventTransformerLambdaServiceRoleDefaultPolicy5382BB7D": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "iam:ListAccountAliases",
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "sqs:SendMessage",
                "sqs:GetQueueAttributes",
                "sqs:GetQueueUrl",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "CloudTrailSlackIntegrationQueue28060435",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CloudTrailSlackIntegrationEventTransformerLambdaServiceRoleDefaultPolicy5382BB7D",
        "Roles": [
          {
            "Ref": "CloudTrailSlackIntegrationEventTransformerLambdaServiceRole9B83CFED",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CloudTrailSlackIntegrationQueue28060435": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "FifoQueue": true,
        "QueueName": "CloudTrailSlackIntegrationc84e46f579ec6021ca77656851fd48e3a36ec4aad0.fifo",
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "CloudTrailSlackIntegrationRuleForAssumeRole04E292A6": {
      "Properties": {
        "EventPattern": {
          "detail": {
            "eventName": [
              "AssumeRole",
            ],
            "requestParameters": {
              "roleArn": [
                "arn:aws:iam::123456789012:role/example-role",
              ],
            },
          },
        },
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "CloudTrailSlackIntegrationRuleForAssumeRoleAllowEventRuleStackCloudTrailSlackIntegrationEventTransformerLambda2063974D45963B23": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationRuleForAssumeRole04E292A6",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "CloudTrailSlackIntegrationRuleForRootUserMfaChange09DBDB08": {
      "Properties": {
        "EventPattern": {
          "detail": {
            "eventName": [
              "EnableMFADevice",
            ],
            "requestParameters": {
              "userName": [
                "AWS ROOT USER",
              ],
            },
            "userIdentity": {
              "type": [
                "Root",
              ],
            },
          },
        },
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "CloudTrailSlackIntegrationRuleForRootUserMfaChangeAllowEventRuleStackCloudTrailSlackIntegrationEventTransformerLambda2063974D1C9BFBAF": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationRuleForRootUserMfaChange09DBDB08",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "CloudTrailSlackIntegrationRuleForRootUserPasswordChange02856AF9": {
      "Properties": {
        "EventPattern": {
          "detail": {
            "eventName": [
              "PasswordUpdated",
            ],
            "eventType": [
              "AwsConsoleSignIn",
            ],
            "userIdentity": {
              "type": [
                "Root",
              ],
            },
          },
        },
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "CloudTrailSlackIntegrationRuleForRootUserPasswordChangeAllowEventRuleStackCloudTrailSlackIntegrationEventTransformerLambda2063974DC24B899C": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationRuleForRootUserPasswordChange02856AF9",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "CloudTrailSlackIntegrationRuleForRootUserPasswordRecoveryComplete944DA8F9": {
      "Properties": {
        "EventPattern": {
          "detail": {
            "eventName": [
              "PasswordRecoveryCompleted",
            ],
            "eventType": [
              "AwsConsoleSignIn",
            ],
            "responseElements": {
              "PasswordRecoveryCompleted": [
                "Success",
              ],
            },
            "userIdentity": {
              "type": [
                "Root",
              ],
            },
          },
        },
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "CloudTrailSlackIntegrationRuleForRootUserPasswordRecoveryCompleteAllowEventRuleStackCloudTrailSlackIntegrationEventTransformerLambda2063974D16A728E1": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationRuleForRootUserPasswordRecoveryComplete944DA8F9",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "CloudTrailSlackIntegrationRuleForRootUserPasswordRecoveryRequest4D62C0C3": {
      "Properties": {
        "EventPattern": {
          "detail": {
            "eventName": [
              "PasswordRecoveryRequested",
            ],
            "eventType": [
              "AwsConsoleSignIn",
            ],
            "responseElements": {
              "PasswordRecoveryRequested": [
                "Success",
              ],
            },
            "userIdentity": {
              "type": [
                "Root",
              ],
            },
          },
        },
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "CloudTrailSlackIntegrationRuleForRootUserPasswordRecoveryRequestAllowEventRuleStackCloudTrailSlackIntegrationEventTransformerLambda2063974D5454E1A0": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationRuleForRootUserPasswordRecoveryRequest4D62C0C3",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "CloudTrailSlackIntegrationRuleForRootUserSuccessfulLoginAllowEventRuleStackCloudTrailSlackIntegrationEventTransformerLambda2063974DDEDC5EC7": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationRuleForRootUserSuccessfulLoginB9122E08",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "CloudTrailSlackIntegrationRuleForRootUserSuccessfulLoginB9122E08": {
      "Properties": {
        "EventPattern": {
          "detail": {
            "eventName": [
              "ConsoleLogin",
            ],
            "eventType": [
              "AwsConsoleSignIn",
            ],
            "responseElements": {
              "ConsoleLogin": [
                "Success",
              ],
            },
            "userIdentity": {
              "type": [
                "Root",
              ],
            },
          },
        },
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "CloudTrailSlackIntegrationRuleForRootUserUnsuccessfulLoginAllowEventRuleStackCloudTrailSlackIntegrationEventTransformerLambda2063974D1D9D2291": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationRuleForRootUserUnsuccessfulLoginB3DD368C",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "CloudTrailSlackIntegrationRuleForRootUserUnsuccessfulLoginB3DD368C": {
      "Properties": {
        "EventPattern": {
          "detail": {
            "eventName": [
              "ConsoleLogin",
            ],
            "eventType": [
              "AwsConsoleSignIn",
            ],
            "responseElements": {
              "ConsoleLogin": [
                "Failure",
              ],
            },
            "userIdentity": {
              "type": [
                "Root",
              ],
            },
          },
        },
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "CloudTrailSlackIntegrationEventTransformerLambdaD3A0C95E",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "CloudTrailSlackIntegrationSlackForwarderErrorAlarmA231478E": {
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "Triggers if the Lambda function that polls from SQS and posts deduplicated CloudTrail API calls received through EventBridge to Slack fails (e.g., invalid Slack webhook URL)",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "DatapointsToAlarm": 1,
        "Dimensions": [
          {
            "Name": "FunctionName",
            "Value": {
              "Ref": "CloudTrailSlackIntegrationSlackForwarderLambda313A2B40",
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "Errors",
        "Namespace": "AWS/Lambda",
        "OKActions": [
          {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 1,
        "TreatMissingData": "ignore",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "CloudTrailSlackIntegrationSlackForwarderLambda313A2B40": {
      "DependsOn": [
        "CloudTrailSlackIntegrationSlackForwarderLambdaServiceRoleDefaultPolicy1A9FAB2C",
        "CloudTrailSlackIntegrationSlackForwarderLambdaServiceRoleAFAA799A",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-us-east-1",
          },
          "S3Key": "2fc19559351e833384ddfd6691bf3576d0bdb69173b95732eb9371bbc7971439.zip",
        },
        "Description": "Polls from an SQS FIFO queue containing formatted CloudTrail API calls and sends them to Slack.",
        "Handler": "main.handler_slack_forwarder",
        "LoggingConfig": {
          "LogGroup": {
            "Ref": "CloudTrailSlackIntegrationSlackForwarderLambdaLogGroup958A35FB",
          },
        },
        "Role": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationSlackForwarderLambdaServiceRoleAFAA799A",
            "Arn",
          ],
        },
        "Runtime": "python3.13",
        "Timeout": 15,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CloudTrailSlackIntegrationSlackForwarderLambdaLogGroup958A35FB": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "RetentionInDays": 14,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "CloudTrailSlackIntegrationSlackForwarderLambdaServiceRoleAFAA799A": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CloudTrailSlackIntegrationSlackForwarderLambdaServiceRoleDefaultPolicy1A9FAB2C": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "CloudTrailSlackIntegrationQueue28060435",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CloudTrailSlackIntegrationSlackForwarderLambdaServiceRoleDefaultPolicy1A9FAB2C",
        "Roles": [
          {
            "Ref": "CloudTrailSlackIntegrationSlackForwarderLambdaServiceRoleAFAA799A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CloudTrailSlackIntegrationSlackForwarderLambdaSqsEventSourceStackCloudTrailSlackIntegrationQueue877234B7B399CD08": {
      "Properties": {
        "EventSourceArn": {
          "Fn::GetAtt": [
            "CloudTrailSlackIntegrationQueue28060435",
            "Arn",
          ],
        },
        "FunctionName": {
          "Ref": "CloudTrailSlackIntegrationSlackForwarderLambda313A2B40",
        },
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "TopicBFC7AF6E": {
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;
